src/pages/fr/v1.9.0/troubleshooting/js-errors.mdx
---
titre: "Erreurs JS"
metaTitle: "Erreurs JS"
metaDescription: "Toutes sortes d'erreurs Javascript."
---

Cette section liste les erreurs Javascript les plus rencontrées et signalées par notre communauté.

## ReferenceError: Navigator n'est pas défini

Parfois, cette erreur se produit lorsque vous essayez d'importer les plugins `tracker-assist` ou `tracker-fetch`, cela se produit parce que node essaie de construire la page sans l'API `window` dans l'environnement.

La solution est assez simple. Tout ce que vous avez à faire est de modifier l'import régulier du plugin à l'origine du problème:


```js
import trackerAssist from '@openreplay/tracker-assist/cjs';
```


Pour importer dynamiquement à l'intérieur de `componendDidMount` ou de l'alternative `useEffect`:


```js
import Tracker, { Options } from "@openreplay/tracker";
const tracker = new Tracker({ /* your options */ });

class TrackerComponent extends React.Component {

  componentDidMount = () => {
    import(‘@openreplay/tracker-assist/cjs’).then(({ default: trackerAssist }) => {
      tracker.start(/* your options */)
      tracker.use(trackerAssist(/* your assist options */))
    })
   }

 /* Other code */
```


De cette façon, tous les plugins dépendants de l'API window seront importés lorsque le composant est rendu.

## Dépendance critique: la demande d'une dépendance est une expression

Cela peut se produire avec des anciennes versions du plugin `tracker-assist`. Vous devriez appliquer ce [contournement](https://github.com/peers/peerjs/issues/630#issuecomment-910028230) si vous rencontrez l'erreur ci-dessous lors de la compilation:


```log
Failed to compile.

./node_modules/peerjs/dist/peerjs.min.js
Critical dependency: the request of a dependency is an expression
```

